# ForkFit

./: README.md
client/: .gitignore  (+1 more)
server/api/: .env.example  Cargo.toml  build.rs
server/api/src/: app.rs  lib.rs  main.rs
server/api/src/admin/: handlers.rs  mod.rs
server/api/src/audit/: middleware.rs  mod.rs  models.rs  repository.rs  tests.rs
server/api/src/auth/: handlers.rs  mod.rs  oauth.rs  types.rs  utils.rs
server/api/src/background/: mod.rs  models.rs  repository.rs  runner.rs  tests.rs
server/api/src/chat/: error.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs  types.rs
server/api/src/common/: crypto.rs  error.rs  id.rs  mod.rs  pagination.rs  validation.rs
server/api/src/config/: db.rs  mod.rs  redis.rs  settings.rs
server/api/src/gateway/: auth.rs  grpc_client.rs  mod.rs  router.rs
server/api/src/intelligence/: context_builder.rs  delta.rs  error.rs  handlers.rs  mod.rs  models.rs  orchestrator.rs  repository.rs  service.rs  stream.rs  types.rs  worker.rs
server/api/src/middleware/: auth.rs  mod.rs  request_id.rs
server/api/src/notification/: mailer.rs
server/api/src/observability/: logging.rs  mod.rs  tracing.rs
server/api/src/plan/: error.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs  types.rs
server/api/src/profile/: error.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs  types.rs
server/api/src/recipe/: error.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs  types.rs
server/api/src/user/: mod.rs  models.rs
server/api/tests/: concurrency_tests.rs  orchestration_tests.rs  plan_tests.rs  profile_tests.rs  recipe_tests.rs
server/api/tests/common/: mock_grpc.rs  mod.rs
server/intelligence/: .env.example  main.py  pyproject.toml
server/intelligence/scripts/: compile_protos.py  seed_database.py
server/intelligence/src/: __init__.py  config.py
server/intelligence/src/agents/: __init__.py  budget.py  calendar.py  consensus.py  culture.py  helpers.py  intent.py  judge.py  nutrition.py  planner.py  recipe.py  safety.py  shopping.py  state.py  visualization.py
server/intelligence/src/db/: __init__.py  pool.py
server/intelligence/src/graph/: __init__.py  orchestrator.py
server/intelligence/src/models/: __init__.py  context.py  intent.py  nutrition.py  plan.py  ui.py
(+205 files in other folders)
