[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }


prost = "0.14.4"
prost-types = "0.14.4"
tonic = "0.14.6"
tonic-prost = "0.14.6"


serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"


thiserror = "2.0.18"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"]  }


tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
opentelemetry = { version = "0.27.1" }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.28.0" }


sqlx = { version = "0.9.0", features = [
 "runtime-tokio",
 "postgres",
 "uuid",
 "chrono",
 "macros",
 "migrate",
 "ipnetwork"
] }


dotenvy = "0.15.7"


bcrypt = "0.19.1"
oauth2 = { version = "5.0.0", features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.13.4", features = ["json", "stream"] }
redis = { version = "0.27.5", features = ["tokio-comp"] }
rand = "0.10.1"
lettre = { version = "0.11.22", default-features = false, features = ["tokio1-rustls-tls", "hostname", "builder", "smtp-transport"]  }
ipnetwork = { version = "0.21.1", features = ["serde"] }


tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "trace", "fs"] }
governor = "0.10.4"
tower_governor = { version = "0.8.0",  features = ["axum"]  }


futures = "0.3.32"
async-stream = "0.3.6"


sha2 = "0.11.0"
regex = "1.12.3"
once_cell = "1.21.4"
url = "2.5.8"

[build-dependencies]
tonic-prost-build = "0.14.6"
